# app/Http/Controllers/CategoryController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use App\Models\Room;
+use App\Models\Hotel;
 use App\Models\Category;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
@@ -22,10 +23,13 @@ class CategoryController extends Controller
  *          required=true,
  *          @OA\JsonContent(
  *              type="object",
- *              @OA\Property(property="categories_name", type="string"),
- *              @OA\Property(property="price", type="integer"),
- *              @OA\Property(property="capacity", type="integer")
- * 
+ *              @OA\Property(property="categories_name", type="string", example="Luxury"),
+ *              @OA\Property(property="price", type="integer", example="14000"),
+ *              @OA\Property(property="capacity", type="integer", example="10"),
+ *              @OA\Property(property="description", type="longText", example="Luxury-Description"),
+ *              @OA\Property(property="hotel_id", type="integer", example="1")
+ *              
+ *              
  *          )
  *     ),
  *     @OA\Response(
@@ -42,6 +46,9 @@ public function store(Request $request)
         'categories_name' => 'required',
         'price' => 'required',
         'capacity' => 'required',
+        'description' => 'required',
+        'hotel_id' => 'required'
+
     ]);
 
     return Category::create($request->all(), 419);
@@ -72,7 +79,7 @@ public function store(Request $request)
 
     /**
      * @OA\Get(
-     *     path="/hotels/categories/{id}",
+     *     path="/hotels/categories/{categories_id}",
      *     tags={"Hotel Category"},
      *     summary="Show Categories room list",
      *     description="Show All Categories Room list",
@@ -80,7 +87,7 @@ public function store(Request $request)
      *    
      * 
      * * @OA\Parameter(
-     *          name="id",
+     *          name="categories_id",
      *          description="Categories id",
      *          required=true,
      *          in="path",
@@ -95,12 +102,51 @@ public function store(Request $request)
      *     )
      * )
      */
-    public function room($id) {
-        $Room = Room::with('rooms')->where('categories_id',$id)->first();
+    public function rooms($id) {
+        // return response($id, 200);
+        $Room = Category::where('categories.categories_id',$id)
+            ->with('rooms')
+            ->first();
 
         return response()->json([
             'data' => $Room
         ],201);
     }
 
+    // Get all categories from hotel id
+    /**
+     * @OA\Get(
+     *     path="/hotels/{hotel_id}",
+     *     tags={"Hotel Category"},
+     *     summary="Show hotel Categories",
+     *     description="Show hotel categories",
+     *     operationId="ShowHotelCategories",
+     *    
+     * 
+     * * @OA\Parameter(
+     *          name="hotel_id",
+     *          description="Hotel id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     * 
+     *     @OA\Response(
+     *         response="default",
+     *         description="successful operation"
+     *     )
+     * )
+     */
+    public function categories($id) {
+        // return response($id, 200);
+        $Category = Hotel::where('hotels.hotel_id',$id) // from model table
+            ->with('categories') // from model
+            ->first();
+
+        return response()->json([
+            'data' => $Category
+        ],201);
+    }
 }
