# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\BookingController;
 use App\Http\Controllers\RoomController;
 use App\Http\Controllers\HotelController;
 use App\Http\Controllers\CategoryController;
@@ -18,37 +19,43 @@ use App\Http\Controllers\CategoryController;
 |
 */
 
+// Booking API
+Route::post('/hotels/booking', [BookingController::class, 'store']);
+
+Route::get('/hotels/booking', [BookingController::class, 'index']);
+
+Route::get('/hotels/booking/{hotel_id}', [BookingController::class, 'bookings']);
+// Booking API
 
 // Room API
-
 Route::post('/hotels/rooms', [RoomController::class, 'store']);
 
 Route::get('/hotels/rooms', [RoomController::class, 'index']);
-
 // Room API
 
 // Categories API
-
 Route::post('/hotels/categories', [CategoryController::class, 'store']);
 
 Route::get('/hotels/categories', [CategoryController::class, 'index']);
 
-Route::get('/hotels/categories/{id}', [CategoryController::class, 'room']);
-
+Route::get('/hotels/categories/{categories_id}', [CategoryController::class, 'rooms']);
 // Categories API
 
 
-// CRUD Api
+// CRUD Hotel Api
 Route::post('/hotels', [HotelController::class, 'store']);
 
-Route::put('/hotels/{id}', [HotelController::class, 'update']);
+Route::put('/hotels/{hotel_id}', [HotelController::class, 'update']);
 
-Route::delete('/hotels/{id}', [HotelController::class, 'destroy']);
+Route::delete('/hotels/{hotel_id}', [HotelController::class, 'destroy']);
 
-Route::get('/hotels/{id}', [HotelController::class, 'show']);
+Route::get('/hotels/{hotel_id}', [HotelController::class, 'show']);
 
 Route::get('/hotels', [HotelController::class, 'index']);
-// CRUD Api
+
+Route::get('/hotels/{hotel_id}', [CategoryController::class, 'categories']);
+
+// CRUD Hotel Api
 
 
 // Auth API
